raffia/tests/error/scss/at-rule/use/with-extra-comma.snap
---
source: raffia/tests/error.rs
---
error: expect token `$var`, but `,` received
  ┌─ with-extra-comma.scss:1:26
  │
1 │ @use "other" with ($a: b,,);
  │                          ^


